# Renderide

./: .gitattributes  .gitignore  Cargo.toml  Generators.sln  README.md  clippy.toml  config.toml  configuration.ini
crates/bootstrapper/: Cargo.toml  build.rs
crates/bootstrapper/src/: child_lifetime.rs  cli.rs  config.rs  error.rs  host.rs  host_spawner.rs  ipc.rs  lib.rs  main.rs  orchestration.rs  orphan.rs  paths.rs  process_lifetime.rs  protocol.rs  queue_commands.rs  resoboot.rs  runtime.rs  vr_prompt.rs  wine_detect.rs  wine_helpers.rs
crates/bootstrapper/src/child_lifetime/: linux.rs  macos.rs  other.rs  windows.rs
crates/renderide/: Cargo.toml  build.rs
crates/renderide-test/: Cargo.toml
crates/renderide-test/src/: cli.rs
crates/renderide-test/src/host/: mod.rs  scene_session.rs
crates/renderide/RENDERIDESHADERS/: registry.json
crates/renderide/RENDERIDESHADERS/common/: color_util.wgsl  ui_common.wgsl  uniform_ring.wgsl
crates/renderide/RENDERIDESHADERS/pbr/: pbs_metallic.wgsl
crates/renderide/RENDERIDESHADERS/ui/: ui_text_unlit.wgsl  ui_unlit.wgsl
crates/renderide/RENDERIDESHADERS/world/: unlit.wgsl
crates/renderide/build_support/: shader.rs
crates/renderide/shaders/: mesh_blendshape.wgsl  mesh_skinning.wgsl
crates/renderide/shaders/source/backend/: depth_blit_r32_to_depth.wgsl  depth_blit_r32_to_depth_stereo.wgsl  procedural_skybox.wgsl  (+4 more)
crates/renderide/src/: app.rs  config.rs  diagnostics.rs  gpu_mesh.rs  lib.rs  log.rs  main.rs  native_stdio.rs  run_error.rs  runtime.rs  stencil.rs
crates/renderide/src/app/: frame_loop.rs  frame_pacing.rs  headless.rs  renderide_app.rs  startup.rs
crates/renderide/src/assets/: host_shader_router.rs  manager.rs  material_batch_wire_metrics.rs  material_properties.rs  material_property_host.rs  material_update_batch.rs  mesh.rs  mod.rs  native_ui_blend.rs  registry.rs  shader.rs  shader_logical_name.rs  shader_program.rs  shader_unity_asset.rs  texture.rs  texture_unpack.rs  ui_material_contract.rs  util.rs  world_unlit_material_contract.rs
crates/renderide/src/backend/: cluster_gpu.rs  debug_hud_bundle.rs  embedded_material_bind.rs  embedded_material_layout.rs  frame_gpu.rs  frame_gpu_bindings.rs  frame_gpu_error.rs  frame_resource_manager.rs  gpu_mesh_pass_timestamp.rs  history_registry.rs  light_gpu.rs  material_system.rs  mesh_deform_scratch.rs  mod.rs  occlusion.rs  per_draw_resources.rs  per_view_resource_map.rs  reflection_probe_sh2.rs  render_backend.rs  view_resource_registry.rs
crates/renderide/src/config/: app_config.rs  ini.rs  mod.rs  persist.rs  reload.rs  resolve.rs  settings.rs  types.rs
crates/renderide/src/diagnostics/: debug_hud.rs  debug_hud_encode_error.rs  frame_diagnostics_snapshot.rs  frame_timing_hud_snapshot.rs  helpers.rs  hud.rs  hud_input.rs  live_frame.rs  mod.rs  renderer_info_snapshot.rs
crates/renderide/src/frontend/: decoupling.rs  frame_start_performance.rs  init_state.rs  mod.rs  renderer_frontend.rs
crates/renderide/src/gpu/: accel.rs  blendshape_bind_chunks.rs  cluster_buffer.rs  context.rs  frame_globals.rs  instance_limits.rs  limits.rs  mesh.rs  mesh_preprocess.rs  mod.rs  msaa_depth_resolve.rs  native_ui_bind_cache.rs  pipeline.rs  pipeline_descriptor_cache.rs  present.rs  queue_access_gate.rs  registry.rs  shader_key.rs  state.rs  write_texture_gate.rs
crates/renderide/src/ipc/: connection.rs  dual_queue.rs  headless_config.rs  receiver.rs  shared_memory.rs
crates/renderide/src/materials/: builtin_solid.rs  cache.rs  embedded_raster_pipeline.rs  embedded_shader_stem.rs  manifest_stem.rs  material_pass_tables.rs  material_passes.rs  material_passes_policy_tests.rs  mod.rs  pipeline_build_error.rs  raster_pipeline.rs  registry.rs  render_state.rs  router.rs  stem_manifest.rs  wgsl_reflect.rs
crates/renderide/src/occlusion/: system.rs
crates/renderide/src/pipelines/: mod.rs
crates/renderide/src/process_io/: fatal_crash_log.rs  native_stdio.rs
crates/renderide/src/profiling/: mod.rs
crates/renderide/src/render/: batch.rs  frame_prep.rs  lights.rs  loop.rs  mod.rs  pass.rs  target.rs  task.rs  view.rs  visibility.rs
crates/renderide/src/render_graph/: blackboard.rs  builder.rs  cache.rs  camera.rs  cluster_frame.rs  compiled.rs  context.rs  error.rs  frame_params.rs  frame_upload_batch.rs  frustum.rs  gpu_cache.rs  hi_z_cpu.rs  ids.rs  mod.rs  pass.rs  record_parallel.rs  resources.rs  schedule.rs  secondary_camera.rs  skinning_palette.rs  swapchain_scope.rs  test_fixtures.rs  transient_pool.rs  world_mesh_cull.rs  world_mesh_cull_eval.rs  world_mesh_draw_prep.rs  world_mesh_draw_stats.rs
crates/renderide/src/resources/: budget.rs  cubemap_pool.rs  mesh_pool.rs  mod.rs  render_texture_pool.rs  resource_pool.rs  texture3d_pool.rs  texture_pool.rs
crates/renderide/src/runtime/: accessors.rs  command_dispatch.rs  commands.rs  debug_hud_frame.rs  frame_render.rs  frame_submit.rs  frame_view_plan.rs  host_camera_apply.rs  ipc_init_dispatch.rs  mod.rs  orchestration_tests.rs  renderer_command_kind.rs  secondary_cameras.rs  xr_impls.rs
crates/renderide/src/scene/: camera_apply.rs  coordinator.rs  error.rs  graph.rs  layer_apply.rs  lights.rs  math.rs  mesh_apply.rs  mesh_material_row.rs  mod.rs  pose.rs  reflection_probe.rs  reflection_probe_sh2.rs  render_space.rs  transforms_apply.rs  types.rs  world.rs
crates/renderide/src/session/: commands.rs  frame_data.rs  frame_perf.rs  init.rs  mod.rs  native_ui_routing_metrics.rs  receiver.rs  session.rs  state.rs
crates/renderide/src/shaders/: mod.rs
crates/renderide/src/shared/: buffer.rs  mod.rs  shader_upload_extras.rs  shared.rs
crates/renderide/src/xr/: app_integration.rs  bootstrap.rs  debug_utils.rs  host_camera_sync.rs  mod.rs  session.rs  stderr_forward.rs  swapchain.rs
crates/renderide/tests/: build_shader_parallel.rs  clustered_light_shader_audit.rs  instancing_batches.rs  render_graph_compile.rs
crates/renderide/wgsl_modules/: color_util.wgsl  host_unlit.wgsl  normal_debug.wgsl  ui_common.wgsl  ui_text_unlit.wgsl  ui_unlit.wgsl  uniform_ring.wgsl  uv_debug.wgsl
(+674 files in other folders)
