# Root Cargo.toml (Workspace Level)
[workspace]
resolver = "2"
members = [
  "crates/renderide",
  "crates/interprocess",
  "crates/bootstrapper",
  "crates/logger",
]

# Faster-than-default dev builds: inherits `dev` (debug symbols, unwind, assertions) but uses opt 2.
# (`debug` is a reserved profile name in Cargo, so this is named `dev-fast`.)
# Usage: `cargo build --profile dev-fast`
[profile.dev-fast]
inherits = "dev"
opt-level = 2

# Global Release Build Settings
[profile.release]
# Disable debug symbols to reduce file size and increase performance
debug = false
# Full optimization for maximum performance
opt-level = 3
# Enable Link-Time Optimization (LTO) for smaller and faster binaries
lto = true
# Disable debug assertions for better performance
debug-assertions = false
# Set a lower panic strategy to reduce binary size (Unwind uses more space)
panic = "abort"
