# Root Cargo.toml (Workspace Level)
[workspace]
resolver = "2"
members = [
  "crates/renderide",
  "crates/renderide-shared",
  "crates/renderide-test",
  "crates/interprocess",
  "crates/bootstrapper",
  "crates/logger",
]

# Faster-than-default dev builds: inherits `dev` (debug symbols, unwind, assertions) but uses opt 2.
# (`debug` is a reserved profile name in Cargo, so this is named `dev-fast`.)
# Usage: `cargo build --profile dev-fast`
[profile.dev-fast]
inherits = "dev"
opt-level = 2

# Global Release Build Settings
[profile.release]
# Disable debug symbols to reduce file size and increase performance
debug = true
# Full optimization for maximum performance
opt-level = 3
# Enable Link-Time Optimization (LTO) for smaller and faster binaries
lto = true
# Disable debug assertions for better performance
debug-assertions = false
# Set a lower panic strategy to reduce binary size (Unwind uses more space)
panic = "abort"

[workspace.lints.rust]
closure_returning_async_block = "warn"
deprecated_in_future = "warn"
deprecated_safe_2024 = "warn"
deref_into_dyn_supertrait = "warn"
ffi_unwind_calls = "warn"
impl_trait_redundant_captures = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
meta_variable_misuse = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
multiple_supertrait_upcastable = "warn"
must_not_suspend = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
resolving_to_items_shadowing_supertrait_items = "warn"
shadowing_supertrait_items = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unused_lifetimes = "warn"
unused_import_braces = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unsafe_op_in_unsafe_fn = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# bug-catchers
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
mem_forget = "warn"

# discipline
allow_attributes = "warn"

# mechanical cleanup
assigning_clones = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
manual_assert = "warn"
if_not_else = "warn"
match_wildcard_for_single_variants = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
implicit_clone = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
filter_map_next = "warn"
manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
option_as_ref_cloned = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
ignored_unit_patterns = "warn"
single_char_pattern = "warn"
str_split_at_newline = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unused_async = "warn"

# resource-management
rc_buffer = "warn"
unused_result_ok = "warn"
large_types_passed_by_value = "warn"
too_many_lines = "warn"
fn_params_excessive_bools = "warn"
debug_assert_with_mut_call = "warn"
copy_iterator = "warn"
into_iter_without_iter = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
maybe_infinite_iter = "warn"
zero_sized_map_values = "warn"

# additional bug-catchers
redundant_clone = "warn"
as_ptr_cast_mut = "warn"
borrow_as_ptr = "warn"
cast_ptr_alignment = "warn"
non_send_fields_in_send_ty = "warn"
useless_let_if_seq = "warn"
format_push_string = "warn"
allow_attributes_without_reason = "warn"
mut_mut = "warn"
no_effect_underscore_binding = "warn"
no_mangle_with_rust_abi = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ptr_offset_by_literal = "warn"
ref_as_ptr = "warn"
same_length_and_capacity = "warn"
should_panic_without_expect = "warn"
unchecked_time_subtraction = "warn"
unsafe_derive_deserialize = "warn"
unicode_not_nfc = "warn"

# zero-cost sentinels
path_buf_push_overwrite = "warn"
same_functions_in_if_condition = "warn"
invalid_upcast_comparisons = "warn"
mismatching_type_param_order = "warn"
transmute_ptr_to_ptr = "warn"
rc_mutex = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
large_stack_arrays = "warn"
lossy_float_literal = "warn"
recursive_format_impl = "warn"
suspicious_xor_used_as_pow = "warn"
fallible_impl_from = "warn"
mixed_read_write_in_expression = "warn"
empty_drop = "warn"
verbose_file_reads = "warn"
stable_sort_primitive = "warn"
option_option = "warn"
create_dir = "warn"
needless_bitwise_bool = "warn"
index_refutable_slice = "warn"

# discipline
map_err_ignore = "warn"
