[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
interprocess = { path = "../interprocess" }
logger = { path = "../logger" }
arboard = "3"
libc = "0.2"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }