[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"
description = "ResoBoot-aligned process bootstrap: spawns Renderite Host, IPC queue loop, renderer and clipboard bridging."

[lib]
path = "src/lib.rs"

[[bin]]
name = "bootstrapper"
path = "src/main.rs"

[dependencies]
interprocess = { path = "../interprocess" }
logger = { path = "../logger" }
arboard = "3"
serde_json = "1"
getrandom = "0.4.2"
libc = "0.2"
rfd = "0.17.2"

[target.'cfg(target_os = "macos")'.dependencies]
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
