[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2021"
description = "ResoBoot-aligned process bootstrap: spawns Renderite Host, IPC queue loop, renderer and clipboard bridging."

[lib]
path = "src/lib.rs"

[[bin]]
name = "bootstrapper"
path = "src/main.rs"

[dependencies]
interprocess = { path = "../interprocess" }
logger = { path = "../logger" }
thiserror = "2"
arboard = "3"
serde_json = "1"
getrandom = "0.4"
libc = "0.2"
rfd = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
